add:  -javascript-solutions: functionalExpression.js, objectExpression.js  -javascript testing system